# pedals

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: main.yml
src/: lib.rs  main.rs  wasm_main.rs
src/audio/: midi.rs  mod.rs
src/audio/midi/: mod.rs
src/audio_unit/: delay.rs  fft.rs  gain.rs  looper.rs  mod.rs  pipeline.rs  split.rs  transparent.rs
src/config/: audio.rs  effect.rs  midi.rs  mod.rs
src/config/effect/: delay.rs  looper.rs  mod.rs
src/effect/: delay.rs  fft.rs  looper.rs  mod.rs  pipeline.rs  tap_tempo.rs  tempo.rs  transparent.rs
src/pedal/: config.rs  delay.rs  mod.rs  split.rs  transparent.rs
src/pipeline/: mod.rs
src/ring_buffer/: mod.rs
src/util/: mod.rs  number.rs
web/: index.html  index.js  package-lock.json  package.json
