[package]
name = "pedals"
version = "0.1.0"
authors = ["Peter Stuart <peter@peterstuart.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.45"
cpal = "0.13.4"
midir = "0.7.0"
num-traits = "0.2.14"
ringbuf = "0.2.6"
rustfft = "6.0.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.2"
wmidi = "4.0.6"

[lib]
name = "pedals"
path = "src/lib.rs"

[[bin]]
name = "pedals"
path = "src/main.rs"
